Web Framework v6.8.7
Created and maintained by Darius Babcock

## Version 6.8.7 ##
	- Added GSAP library for faster animation options (disabled by default)
	- Added SwipeJS gallery plugin for mobile galleries
	- Added XMLtoJSON support to class.json_cacher.php
	- Fixed bug in htaccess that didn't first check for mod_rewrite before running rules

## Version 6.8.6 ##
	- Added "Google Spreadsheet to Simple JSON" javascript
	- Added JSON file caching class and script (class.json_cache.php and cacher.php)
	- Added Modernizr v2.7.1 and enabled by default
	- Added SimpleHTMLDom script for jQuery-like PHP dom traversing
	- Added custom icon font (marwin-mix-icons)
	- Updated Foundation Grid to v5
	- Updated jQuery to v1.10.2
	- Updated jQuery UI to v1.10.3
	- Updated CKEditor to v4.3.1
	- Fixed small bug in footer.php that caused script error if not overlays were present on page
	- Optimized caching, compression, and file loading further in htaccess and class.loader.php
	
## Version 6.8.5 ##
	- Removed swiftmailer
	- Removed superfish
	- Removed lite-accordion
	- Added a "master_container" wrapper to layout
	- Removed foundation grid container as it is not needed
	- Revamped font auto-load script. Now loads fontface font stylesheets directly and "as is"
	- Font auto-load script now looks only for folders within "lib/fonts/autoload". Loose files won't work
	- Changed default font to 'LuxiSansRegular' for standardization. Specified in lib/css/core_styles.php
	- Added 'web-symbols' font for font-based icons/symbols
	- Added 'modern-pictograms' font for font-based icons/symbols
	- Added 'heydings-common-icons' font for font-based icons/symbols
	- Tweaked compress_scripts algorithm to clean scripts better. 5% overall reduction in size
	- Completely rewrote css buttons and added color variants
	- Added social button options to core_buttons.php
	- Changed encoding of emails in class.email to be more html-friendly