@@ -1,0 +1,5 @@
+<LIMIT GET POST>
+order deny,allow
+deny from all
+allow from none
+</LIMIT>
